<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#e2e2e2"
    tools:context=".Profesor.ModifClasaContinutFrag">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/h1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modifClasaClontinut"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nouData"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modifClasaContinutFragNouData"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nouMaterie"/>

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modifClasaContinutFragNouMaterie"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nouDificultate"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/modifClasaContinutFragNouDificultate"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/nouPrecizari"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">
                <EditText
                    android:layout_width="wrap_content"
                    android:id="@+id/modifClasaContinutFragNouPrecizari"
                    android:inputType="textMultiLine"
                    android:layout_weight="1"
                    android:layout_span="2"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participantTitlu"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">
                <org.lucasr.twowayview.TwoWayView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/participantListView"
                    style="@style/TwoWayView"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp"
                    android:drawSelectorOnTop="false"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_span="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/modifClasaContinutFragNouModif"
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/button2"
                        android:text="@string/modifContinut"
                        android:textColor="@color/background"
                         />

                    <Button
                    android:layout_margin="5dp"
                    android:layout_width="100dp"
                    android:layout_height="32dp"
                    android:text="@string/stergecontinut"
                    android:background="@drawable/button2"
                        android:textColor="@color/background"
                    android:id="@+id/modifClasaContinutFragSterge" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
