<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e2e2e2"
    tools:context=".Profesor.ModifParticipantFrag"
    android:padding="20dp">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/h1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/modifParticipant"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
            android:stretchColumns="1">

            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participantnouNume"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nouParticipantNume"
                    android:layout_weight="1"/>
            </TableRow>
            <TableRow android:layout_margin="5dp">

                <TextView
                    style="@style/Header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/participantnouEmail"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nouParticipantEmail"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_span="2"
                    android:gravity="center">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/button2"
                        android:text="@string/modifdataparticipant"
                        android:id="@+id/modifParticipantFragModifParti"
                        android:textColor="@color/background"
                        android:layout_gravity="center"/>

                    <Button
                        android:layout_width="100dp"
                        android:layout_height="32dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/button2"
                        android:id="@+id/participantItem_stergeParticipantData"
                        android:textColor="@color/background"
                        android:text="@string/stergeparticipant"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
