<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="170dp"
    android:layout_height="260dp"
    android:padding="5dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:background="@drawable/drr"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_gravity="center">
            <TextView
                style="@style/titleInListItem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Data"
                android:textColor="@color/background"
                android:id="@+id/clasaContinutItemData"
                android:gravity="center_horizontal"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                style="@style/titleInListItem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nouMaterie"
                 />
            <TextView
                style="@style/content"
                android:text="Materie"
                android:textColor="@color/background"
                android:id="@+id/clasaContinutItemMateria"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_margin="5dp">
            <TextView
                style="@style/titleInListItem"
                android:textColor="@color/background"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nouDificultate"
                />

            <TextView
                style="@style/content"
                android:text="Dificultate"
                android:textColor="@color/background"
                android:id="@+id/clasaContinutItemDificultate"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp">
            <TextView
                style="@style/titleInListItem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nouPrecizari"/>

                <TextView
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:maxLines="6"
                    android:ellipsize="end"
                    android:layout_height="130dp"
                    android:background="#E2E2E2"
                    android:text="Precizari"
                    style="@style/content"
                    android:id="@+id/clasaContinutItemPrecizari"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>